...
    "window.analytics": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Analytics"
          }
        },
        "ru": {
          "stringUnit": {
            "state": "translated",
            "value": "Аналитика"
...
    "window.reports": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Reports"
          }
        },
        "ru": {
          "stringUnit": {
            "state": "translated",
            "value": "Отчёты"
...
    "window.transactions": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Transactions"
          }
        },
        "ru": {
          "stringUnit": {
            "state": "translated",
            "value": "Операции"
...
